--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@babel/polyfill": "7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.5.0",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
@@ -80,10 +82,10 @@
     "minimist": "1.2.0",
     "node-sass": "^4.14.1",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
+    "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-calendar": "^3.1.0",
-    "react-dom": "16.6.0",
+    "react-dom": "16.13.1",
     "react-google-charts": "^3.0.15",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
