--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "mui-rte": "^1.23.1",
     "node-sass": "^4.14.1",
     "prop-types": "15.6.2",
     "react": "16.13.1",
