--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "moment": "^2.27.0",
     "mui-rte": "^1.23.1",
     "node-sass": "^4.14.1",
     "prop-types": "15.6.2",
     "react": "16.13.1",
+    "react-big-calendar": "^0.26.0",
     "react-bootstrap": "^1.0.1",
     "react-calendar": "^3.1.0",
     "react-dom": "16.13.1",
