--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "4.3.1",
     "reactstrap": "^8.4.1",
+    "read-more-react": "^1.0.10",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
