--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
     "bootstrap": "^4.5.0",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
@@ -83,6 +84,8 @@
     "moment": "^2.27.0",
     "mui-rte": "^1.23.1",
     "node-sass": "^4.14.1",
+    "pdf-viewer-reactjs": "^2.0.7",
+    "pdfjs-dist": "^2.4.456",
     "prop-types": "15.6.2",
     "react": "16.13.1",
     "react-big-calendar": "^0.26.0",
