--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "react": "16.13.1",
     "react-big-calendar": "^0.26.0",
     "react-bootstrap": "^1.0.1",
-    "react-calendar": "^3.1.0",
     "react-content-loader": "^5.1.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "16.13.1",
     "react-google-charts": "^3.0.15",
     "react-helmet": "5.2.0",
