--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
