--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-google-charts": "^3.0.15",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-read-more-less": "^0.1.6",
     "react-redux": "5.0.7",
     "react-responsive-carousel": "^3.2.7",
