--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "hoist-non-react-statics": "3.0.1",
     "immutable": "3.8.2",
     "intl": "1.2.5",
+    "dayjs": "^1.7.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "jspdf": "^2.1.1",
@@ -112,7 +113,9 @@
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
-    "warning": "4.0.2"
+    "warning": "4.0.2",
+    "browser-info": "^1.2.0",
+    "public-ip": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
